# vetor-dinamico-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile
.github/workflows/: classroom.yml
include/vector-lib/: vector-array.hpp  vector-linked.hpp
tests/: CMakeLists.txt
tests/inputs/: input-02.txt  input-03.txt  input-04.txt  input-05.txt  input-06.txt
tests/tests_array/: CMakeLists.txt  test_array_back.cpp  test_array_clear.cpp  test_array_count.cpp  test_array_find.cpp  test_array_front.cpp  test_array_get_at.cpp  test_array_insert_at.cpp  test_array_is_empty.cpp  test_array_memory_leak_fail.cpp  test_array_memory_leak_ok.cpp  test_array_pop_back.cpp  test_array_pop_front.cpp  test_array_push_back.cpp  test_array_push_front.cpp  test_array_remove.cpp  test_array_remove_at.cpp  test_array_sum.cpp
tests/tests_linked/: CMakeLists.txt  test_linked_back.cpp  test_linked_clear.cpp  test_linked_count.cpp  test_linked_find.cpp  test_linked_front.cpp  test_linked_get_at.cpp  test_linked_insert_at.cpp  test_linked_is_empty.cpp  test_linked_memory_leak_fail.cpp  test_linked_memory_leak_ok.cpp  test_linked_pop_back.cpp  test_linked_pop_front.cpp  test_linked_push_back.cpp  test_linked_push_front.cpp  test_linked_remove.cpp  test_linked_remove_at.cpp  test_linked_sum.cpp
tests/tests_student/: CMakeLists.txt  MeuTeste.cpp
