# Adicionar subdiretório de testes para a implementação com array
add_subdirectory(tests_array)

# Adicionar subdiretório de testes para a implementação com arralinked list
add_subdirectory(tests_linked)

# Adicionar subdiretório de testes para a implementação do aluno
add_subdirectory(tests_student)
